"""
Costuras de Paqui - Sewing Shop Management System
==================================================

Models organized by team member ownership.
Each member edits ONLY their assigned section to minimize merge conflicts.

OWNERSHIP MAP:
  Member 1 -> Customer
  Member 2 -> Order, OrderItem
  Member 3 -> Garment, Measurement, Material
  Member 4 -> Employee, WorkTicket, ProductionLog
  Member 5 -> Delivery

SCHEMA FIXES applied (from original schema PDF):
  - WorkTicket.garment_type (FK) renamed to 'garment' (FK to Garment).
    The garment_type STRING lives on Garment, not WorkTicket.
  - WorkTicket.instructions is TextField (not FK - was a typo in the schema).
  - Garment.materials is a simple ManyToManyField (no through-table for v1).
  - Order.total_price is a manually-entered DecimalField (no auto-calc for v1).
"""
from django.db import models


# ============================================================
# CHOICES (shared across modules - agreed by whole team Day 1)
# ============================================================

ORDER_STATUS_CHOICES = [
    ('received', 'Received'),
    ('confirmed', 'Confirmed'),
    ('in_production', 'In Production'),
    ('ready_for_delivery', 'Ready for Delivery'),
    ('delivered', 'Delivered'),
    ('cancelled', 'Cancelled'),
]

GARMENT_STATUS_CHOICES = [
    ('pending', 'Pending'),
    ('in_production', 'In Production'),
    ('completed', 'Completed'),
    ('on_hold', 'On Hold'),
]

TICKET_STAGE_CHOICES = [
    ('order_received', 'Order Received'),
    ('design_confirmed', 'Design Confirmed'),
    ('cutting', 'Cutting'),
    ('sewing', 'Sewing'),
    ('finishing', 'Finishing'),
    ('quality_check', 'Quality Check'),
    ('ready_for_delivery', 'Ready for Delivery'),
    ('rework', 'Rework'),
]

PRIORITY_CHOICES = [
    ('normal', 'Normal'),
    ('urgent', 'Urgent'),
    ('rush', 'Rush'),
]

DELIVERY_METHOD_CHOICES = [
    ('pickup', 'Pickup at Shop'),
    ('courier', 'Courier'),
    ('in_person', 'In-Person Delivery'),
]


# ============================================================
# MEMBER 1 - Customer
# ============================================================

class Customer(models.Model):
    first_name = models.CharField(max_length=100)
    last_name = models.CharField(max_length=100)
    phone = models.CharField(max_length=20)
    email = models.EmailField(max_length=255, blank=True)
    address = models.TextField(blank=True)
    notes = models.TextField(blank=True, help_text="Preferences or anything to remember about this customer")
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ['last_name', 'first_name']

    def __str__(self):
        return f"{self.first_name} {self.last_name}"


# ============================================================
# MEMBER 3 - Garment, Measurement, Material
# (Defined BEFORE Order because Order/OrderItem references Garment)
# ============================================================

class Material(models.Model):
    name = models.CharField(max_length=100)
    fabric_type = models.CharField(max_length=50, blank=True)
    color = models.CharField(max_length=50, blank=True)
    stock_meters = models.DecimalField(max_digits=8, decimal_places=2, default=0)
    price_per_meter = models.DecimalField(max_digits=8, decimal_places=2, default=0)

    class Meta:
        ordering = ['name']

    def __str__(self):
        return f"{self.name} ({self.color})" if self.color else self.name


class Measurement(models.Model):
    bust = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    waist = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    hips = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    shoulder_width = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    sleeve_length = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    inseam = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    total_length = models.DecimalField(max_digits=6, decimal_places=2, null=True, blank=True)
    extra_notes = models.TextField(blank=True)

    def __str__(self):
        return f"Measurement #{self.pk}"


class Garment(models.Model):
    garment_type = models.CharField(max_length=50, help_text="dress, suit, trousers, shirt, etc.")
    color = models.CharField(max_length=50, blank=True)
    design_notes = models.TextField(blank=True)
    priority = models.CharField(max_length=20, choices=PRIORITY_CHOICES, default='normal')
    status = models.CharField(max_length=30, choices=GARMENT_STATUS_CHOICES, default='pending')
    measurement = models.OneToOneField(
        Measurement,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name='garment',
    )
    materials = models.ManyToManyField(Material, blank=True, related_name='garments')
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ['-created_at']

    def __str__(self):
        return f"{self.garment_type} ({self.color})" if self.color else self.garment_type


# ============================================================
# MEMBER 2 - Order, OrderItem
# ============================================================

class Order(models.Model):
    customer = models.ForeignKey(Customer, on_delete=models.PROTECT, related_name='orders')
    order_date = models.DateField()
    due_date = models.DateField()
    status = models.CharField(max_length=30, choices=ORDER_STATUS_CHOICES, default='received')
    total_price = models.DecimalField(max_digits=10, decimal_places=2, default=0)
    remarks = models.TextField(blank=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        ordering = ['-order_date', '-id']

    def __str__(self):
        return f"Order #{self.pk} - {self.customer}"


class OrderItem(models.Model):
    order = models.ForeignKey(Order, on_delete=models.CASCADE, related_name='items')
    garment = models.ForeignKey(Garment, on_delete=models.PROTECT, related_name='order_items')
    quantity = models.PositiveIntegerField(default=1)
    unit_price = models.DecimalField(max_digits=10, decimal_places=2, default=0)

    def __str__(self):
        return f"{self.quantity} x {self.garment} (Order #{self.order_id})"

    @property
    def line_total(self):
        return self.quantity * self.unit_price


# ============================================================
# MEMBER 4 - Employee, WorkTicket, ProductionLog
# ============================================================

class Employee(models.Model):
    first_name = models.CharField(max_length=100)
    last_name = models.CharField(max_length=100)
    role = models.CharField(max_length=50, help_text="tailor, seamstress, cutter, etc.")
    phone = models.CharField(max_length=20, blank=True)
    specialization = models.CharField(max_length=100, blank=True)
    is_active = models.BooleanField(default=True)
 
    class Meta:
        ordering = ['last_name', 'first_name']
 
    def __str__(self):
        return f"{self.first_name} {self.last_name} ({self.role})"
 
 
class WorkTicket(models.Model):
    # SCHEMA FIX: original schema had 'garment_type' as FK - this was a bug.
    # The FK should point to Garment; garment_type (string) lives on Garment.
    garment = models.ForeignKey(Garment, on_delete=models.CASCADE, related_name='tickets')
    assigned_to = models.ForeignKey(
        Employee,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name='tickets',
    )
    current_stage = models.CharField(max_length=30, choices=TICKET_STAGE_CHOICES, default='order_received')
    priority = models.CharField(max_length=20, choices=PRIORITY_CHOICES, default='normal')
    deadline = models.DateField(null=True, blank=True)
    instructions = models.TextField(blank=True)  # SCHEMA FIX: this is TEXT, not FK
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)
 
    class Meta:
        ordering = ['-created_at']
 
    def __str__(self):
        return f"Ticket #{self.pk} - {self.garment}"
 
    def clean(self):
        """
        STRETCH GOAL: Validate that a ticket cannot jump to ready_for_delivery
        without having passed through quality_check first.
 
        We check the ProductionLog for this ticket to see if quality_check
        was ever a to_stage.  This runs on full_clean() / ModelAdmin save.
        """
        from django.core.exceptions import ValidationError
 
        if self.current_stage == 'ready_for_delivery' and self.pk:
            passed_qc = self.logs.filter(to_stage='quality_check').exists()
            if not passed_qc:
                raise ValidationError(
                    "A ticket cannot move to 'Ready for Delivery' without first "
                    "completing the 'Quality Check' stage."
                )
 
 
class ProductionLog(models.Model):
    """
    Immutable audit trail of stage transitions (Business Rule 9).
    Member 4 enforces immutability in admin.py via has_change_permission /
    has_delete_permission.
    """
    ticket = models.ForeignKey(WorkTicket, on_delete=models.CASCADE, related_name='logs')
    performed_by = models.ForeignKey(
        Employee,
        on_delete=models.SET_NULL,
        null=True,
        blank=True,
        related_name='production_logs',
    )
    from_stage = models.CharField(max_length=30, choices=TICKET_STAGE_CHOICES, blank=True)
    to_stage = models.CharField(max_length=30, choices=TICKET_STAGE_CHOICES)
    comments = models.TextField(blank=True)
    timestamp = models.DateTimeField(auto_now_add=True)
 
    class Meta:
        ordering = ['-timestamp']
 
    def __str__(self):
        return f"Log #{self.pk}: {self.from_stage} -> {self.to_stage}"

# ============================================================
# MEMBER 5 - Delivery
# ============================================================

class Delivery(models.Model):
    order = models.OneToOneField(Order, on_delete=models.CASCADE, related_name='delivery')
    delivery_date = models.DateField(null=True, blank=True)
    method = models.CharField(max_length=30, choices=DELIVERY_METHOD_CHOICES, default='pickup')
    final_observations = models.TextField(blank=True)
    recipient_name = models.CharField(max_length=200, blank=True)
    confirmed = models.BooleanField(default=False)
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        verbose_name_plural = 'Deliveries'

    def __str__(self):
        return f"Delivery for Order #{self.order_id}"
