erDiagram
    Customer {
        int id PK
        varchar first_name
        varchar last_name
        varchar phone
        varchar email
        text address
        text notes
        datetime created_at
    }

    Order {
        int id PK
        int customer_id FK
        date order_date
        date due_date
        varchar status
        decimal total_price
        text remarks
        datetime created_at
        datetime updated_at
    }

    OrderItem {
        int id PK
        int order_id FK
        int garment_id FK
        int quantity
        decimal unit_price
    }

    Garment {
        int id PK
        varchar garment_type
        varchar color
        text design_notes
        varchar priority
        varchar status
        int measurement_id FK
        datetime created_at
    }

    Measurement {
        int id PK
        decimal bust
        decimal waist
        decimal hips
        decimal shoulder_width
        decimal sleeve_length
        decimal inseam
        decimal total_length
        text extra_notes
    }

    WorkTicket {
        int id PK
        int garment_id FK
        int assigned_to FK
        varchar current_stage
        varchar priority
        date deadline
        text instructions
        datetime created_at
        datetime updated_at
    }

    Employee {
        int id PK
        varchar first_name
        varchar last_name
        varchar role
        varchar phone
        varchar specialization
        boolean is_active
    }

    ProductionLog {
        int id PK
        int ticket_id FK
        int performed_by FK
        varchar from_stage
        varchar to_stage
        text comments
        datetime timestamp
    }

    Delivery {
        int id PK
        int order_id FK
        date delivery_date
        varchar method
        text final_observations
        varchar recipient_name
        boolean confirmed
        datetime created_at
    }

    Material {
        int id PK
        varchar name
        varchar fabric_type
        varchar color
        decimal stock_meters
        decimal price_per_meter
    }

    GarmentMaterial {
        int id PK
        int garment_id FK
        int material_id FK
        decimal meters_used
    }

    Customer ||--o{ Order : "places"
    Order ||--o{ OrderItem : "contains"
    OrderItem }o--|| Garment : "references"
    Garment ||--|| Measurement : "has"
    Garment ||--o{ WorkTicket : "generates"
    WorkTicket }o--|| Employee : "assigned to"
    WorkTicket ||--o{ ProductionLog : "logs"
    ProductionLog }o--|| Employee : "performed by"
    Order ||--o| Delivery : "has"
    Garment ||--o{ GarmentMaterial : "uses"
    Material ||--o{ GarmentMaterial : "used in"
